2013-06-10  Ryosuke Niwa  <rniwa@webkit.org>

        DocType strings should be 8 bit wide
        https://bugs.webkit.org/show_bug.cgi?id=117487

        Reviewed by Michael Saboff.

        Merge https://chromium.googlesource.com/chromium/blink/+/8da02d0ce3965c4e6bf227db856bce930393429a.

        * html/parser/HTMLConstructionSite.cpp:
        (WebCore::HTMLConstructionSite::insertDoctype):

2013-06-10  Ryosuke Niwa  <rniwa@webkit.org>

        Make more functions const
        https://bugs.webkit.org/show_bug.cgi?id=117455

        Reviewed by Benjamin Poulain.

        Merge https://chromium.googlesource.com/chromium/blink/+/886866f5034d7f30f8aa607b909313f99db1f3b4.

        * editing/VisibleUnits.cpp:
        (WebCore::CachedLogicallyOrderedLeafBoxes::boxIndexInLeaves):
        * html/canvas/WebGLRenderingContext.cpp:
        * page/ContentSecurityPolicy.cpp:
        (WebCore::CSPDirectiveList::evalDisabledErrorMessage):
        * rendering/RenderBlockLineLayout.cpp:
        (WebCore::LineWidth::shouldIndentText):

2013-06-10  Jer Noble  <jer.noble@apple.com>

        REGRESSION(r151302): Many broken webaudio/ tests on Mac port.
        https://bugs.webkit.org/show_bug.cgi?id=117446

        Reviewed by Chris Rogers.

        The new "pageConsentRequiredForAudioStart()" restriction was blocking playback event
        even when page consent was given. Remvoe the restriction immediately in that case.

        * Modules/webaudio/AudioContext.cpp:
        (WebCore::AudioContext::startRendering):

2013-06-10  Andreas Kling  <akling@apple.com>

        REGRESSION(r150633): Find on page non-focused text highlight color is bright yellow.
        <rdar://problem/14098882>
        <http://webkit.org/b/117371>

        Reviewed by Anders Carlsson.

        There was a mistake in the parameter ordering which still compiled because of
        implicit bool/unsigned conversion.
        Changed the interface of Page::findMatchesForText() to use enums instead of bools.
